# typedmem

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
clients/typescript/src/: client.ts  errors.ts  index.ts  types.ts
clients/typescript/test/: client.test.ts
docs/: cli.md  concepts.md  evolvers.md  index.md  profiles.md  quickstart.md  server.md
examples/: DEMO.md  agent_loop_demo.py  belief_refinement_demo.py  child_development_demo.py  engineering_design_demo.py  evolution_demo.py  llm_extraction_demo.py  research_paper_demo.py
tests/: test_agent_memory.py  test_cli.py  test_conflicts.py  test_embeddings.py  test_events.py  test_evolvers_contradictions.py  test_evolvers_drift.py  test_evolvers_goals.py  test_evolvers_summary.py  test_extractor.py  test_extractor_with_profile.py  test_jsonl_store.py  test_kernel.py  test_llm_clients.py  test_llm_extractor.py  test_migration.py  test_policy.py  test_profile_loading.py  test_profiles.py  test_replace_bookkeeping.py  test_retrieval_pipeline.py  test_retriever.py  test_retriever_semantic.py  test_schema.py  test_server.py  test_source.py  test_sqlite_store.py  test_store.py  test_store_with_profile.py  test_workspaces.py
typed_memory/: __init__.py  cli.py  embeddings.py  policy.py  prompts.py  retriever.py  schema.py
typed_memory/evolvers/: __init__.py  drift.py  summary.py
typed_memory/llm/: anthropic.py  base.py  openai.py
typed_memory/profiles/: __init__.py  base.py  loaders.py
typed_memory/stores/: base.py
typedmem/: __init__.py  agent.py  cli.py  events.py  extractor.py  kernel.py  retriever.py  schema.py  source.py
typedmem/evolvers/: base.py  contradictions.py  drift.py  goals.py  summary.py
typedmem/llm/: __init__.py  anthropic.py  fake.py  openai.py
typedmem/profiles/: builtins.py  loaders.py
typedmem/retrieval/: __init__.py  filters.py  ranker.py  resolver.py  retriever.py  router.py  vector_search.py
typedmem/server/: __init__.py  app.py  auth.py  config.py  errors.py  models.py
typedmem/stores/: __init__.py  base.py  jsonl.py  memory.py  sqlite.py
