[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "typedmem"
version = "0.6.2"
description = "Typed, policy-aware, evolving memory layer for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ruxiz" }]
keywords = ["ai", "memory", "agents", "llm", "knowledge", "rag", "anthropic", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/canis-minor/typedmem"
Documentation = "https://github.com/canis-minor/typedmem#readme"
Repository = "https://github.com/canis-minor/typedmem"
Issues = "https://github.com/canis-minor/typedmem/issues"
Changelog = "https://github.com/canis-minor/typedmem/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=7"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.34"]
yaml = ["PyYAML>=6"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5"]
all = ["openai>=1.0", "anthropic>=0.34", "PyYAML>=6"]

[project.scripts]
typedmem = "typedmem.cli:main"

[tool.setuptools.packages.find]
include = ["typedmem*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
