[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "typedmem"
version = "0.7.3"
description = "Contract-driven memory for AI agents — typed schemas, explicit conflict policies, structured provenance, typed event timeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ruxiz" }]
keywords = ["ai", "memory", "agents", "llm", "knowledge", "rag", "anthropic", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/canis-minor/typedmem"
Documentation = "https://github.com/canis-minor/typedmem#readme"
Repository = "https://github.com/canis-minor/typedmem"
Issues = "https://github.com/canis-minor/typedmem/issues"
Changelog = "https://github.com/canis-minor/typedmem/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=7", "httpx>=0.27"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.34"]
yaml = ["PyYAML>=6"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5"]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
]
gcp = [
    "typedmem[server]",
    "google-auth>=2.28",
]
all = [
    "openai>=1.0", "anthropic>=0.34", "PyYAML>=6",
    "fastapi>=0.110", "uvicorn[standard]>=0.30", "pydantic>=2.6",
    "google-auth>=2.28",
]

[project.scripts]
typedmem = "typedmem.cli:main"

[tool.setuptools.packages.find]
include = ["typedmem*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
